package com.swp.pizzashop.form;

import jakarta.validation.constraints.Email;
import jakarta.validation.constraints.NotBlank;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Getter
@Setter
@NoArgsConstructor
public class PasswordResetRequestForm {
    @NotBlank(message = "Email is required")
    @Email(message = "Invalid email format")
    private String email;
}

