@startuml
title Reset Password - Core Classes

skinparam classAttributeIconSize 0

package "Web" {
  class PasswordResetController {
    + forgotPasswordForm(): String
    + handleForgot(): String
    + resetForm(): String
    + handleReset(): String
  }
  class PasswordResetRequestForm {
    - email: String
  }
  class ResetPasswordForm {
    - token: String
    - password: String
    - confirmPassword: String
  }
}

package "Service" {
  interface UserService {
    + initiatePasswordReset(email: String): Optional<String>
    + findByResetPasswordToken(token: String): Optional<User>
    + resetPassword(token: String, newPassword: String): boolean
    + findByEmail(email: String): User
  }
  interface EmailService {
    + sendPasswordResetEmail(user: User, link: String): void
  }
}

package "Persistence" {
  interface UserRepository {
    + findByEmail(email: String): User
  }
  interface PasswordResetTokenRepository {
    + findByToken(token: String): Optional<PasswordResetToken>
    + deleteByUserId(userId: Long): void
    + existsByToken(token: String): boolean
  }
}

package "Domain" {
  class User {
    - id: Long
    + email: String
    + password: String
    + status: String
  }
  class PasswordResetToken {
    - id: Long
    + token: String
    + expiresAt: LocalDateTime
    + used: boolean
    + isExpired(): boolean
  }
}

PasswordResetController --> PasswordResetRequestForm
PasswordResetController --> ResetPasswordForm
PasswordResetController --> UserService
PasswordResetController --> EmailService

UserService --> UserRepository
UserService --> PasswordResetTokenRepository
EmailService --> User
PasswordResetTokenRepository --> PasswordResetToken
PasswordResetToken --> User

@enduml
